# python-course-cookiecutter-v2

./: .pre-commit-config.yaml  FORM.md  Makefile  cookiecutter-test-config.json  cookiecutter.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-test.yaml  create-or-update-repo.yaml  create_or_update_repo.yaml
test-reports/: .coverage  report.xml
tests/: conftest.py  cookiecutter-1a9ebd.json  cookiecutter-1eaaaf.json  cookiecutter-1f43f4.json  cookiecutter-24b7b1.json  cookiecutter-38b427.json  cookiecutter-3ae54e.json  cookiecutter-42edd4.json  cookiecutter-662387.json  cookiecutter-6f817f.json  cookiecutter-7d3b14.json  cookiecutter-8657d4.json  cookiecutter-8b13e5.json  cookiecutter-9106ab.json  cookiecutter-9af48f.json  cookiecutter-a1ef07.json  cookiecutter-ae10a3.json  cookiecutter-b46232.json  cookiecutter-b7fe4a.json  cookiecutter-bd7904.json  cookiecutter-cc2236.json  cookiecutter-daaad1.json  cookiecutter-ed53d2.json  cookiecutter-edc76c.json  cookiecutter-fee966.json
tests/fixtures/: project_dir.py
tests/functional_tests/: test__generate_project.py  test__makefile.py
tests/utils/: project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  pyproject.toml  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: build-test-publish.yaml  build-test.yaml  create_or_update_repo.yaml
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/fixtures/: example_fixture.py
{{cookiecutter.repo_name}}/tests/unit_tests/: test_states_info.py
